--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
             margin: 0;
             font-size: 28px;
         }
-        .image-container {
+
+        /* CENTRER LES CONTENEURS D'IMAGES */
+        .image-container,
+        .single-image-container {
+            text-align: center; /* centre horizontalement */
             border: 3px solid #34495e;
             border-radius: 10px;
             padding: 10px;
@@ -42,6 +46,7 @@
             margin: 0 auto;
             display: inline-block;
         }
+
         .image-grid {
             display: grid;
             grid-template-columns: repeat(4, 1fr);
@@ -54,14 +59,12 @@
             border-radius: 5px;
             overflow: hidden;
         }
-        .tile {
+        .tile,
+        .single-image {
+            display: inline-block; /* permet au parent text-align: center de centrer */
             width: 100%;
             height: 100%;
             object-fit: cover;
-            display: block;
-            margin: 0;
-            padding: 0;
-            border: none;
         }
         .controls {
             text-align: center;
@@ -90,20 +93,6 @@
             margin-top: 20px;
             font-style: italic;
         }
-        .single-image-container {
-            text-align: center;
-            border: 3px solid #34495e;
-            border-radius: 10px;
-            padding: 15px;
-            background: #f8f9fa;
-            margin: 0 auto;
-            display: inline-block;
-        }
-        .single-image {
-            max-width: 100%;
-            border: 2px solid #bdc3c7;
-            border-radius: 5px;
-        }
     </style>
 </head>
 <body>
@@ -117,7 +106,7 @@
         </div>
         
         <div class="controls">
-            <button onclick="showView('composite')">Vue Composite </button>
+            <button onclick="showView('composite')">Vue Composite</button>
             <button onclick="showView('single')">Vue Simple</button>
         </div>
 
@@ -146,7 +135,7 @@
         // Liste des tuiles (0.png à 15.png)
         const tilePaths = Array.from({length: 16}, (_, i) => `${i}.png`);
 
-        // Charger les tuiles
+        // Charger les tuiles dans la grille
         const grid = document.getElementById('imageGrid');
         tilePaths.forEach((path, index) => {
             const img = document.createElement('img');
