--- a/index.html
+++ b/index.html
@@ -4,14 +4,20 @@
     <meta charset="utf-8">
     <title>Image Drone GeoTIFF</title>
     <style>
-        body { 
-            margin: 0; 
-            padding: 20px; 
-            font-family: Arial; 
+        /* CENTRAGE HORIZONTAL ET VERTICAL DE TOUT LE CONTENU */
+        html, body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+        }
+        body {
+            font-family: Arial;
             background: #2c3e50;
             display: flex;
-            justify-content: center;
+            justify-content: center; /* centré horizontalement */
+            align-items: center;     /* centré verticalement */
         }
+
         .container { 
             max-width: 1400px; 
             width: 100%;
@@ -20,9 +26,10 @@
             border-radius: 15px;
             box-shadow: 0 5px 15px rgba(0,0,0,0.3);
             border: 3px solid #3498db;
+            text-align: center; /* centre le contenu horizontalement */
         }
+
         .header {
-            text-align: center;
             margin-bottom: 30px;
             border-bottom: 2px solid #ecf0f1;
             padding-bottom: 20px;
@@ -37,37 +44,7 @@
             font-size: 28px;
         }
 
-        /* CENTRER LES CONTENEURS D'IMAGES */
-        .image-container,
-        .single-image-container {
-            text-align: center;
-            border: 3px solid #34495e;
-            border-radius: 10px;
-            padding: 10px;
-            background: #f8f9fa;
-            margin: 0 auto 20px auto;
-        }
-
-        .image-grid {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            grid-template-rows: repeat(4, 1fr);
-            gap: 0;
-            width: 1024px;
-            height: 1024px;
-            margin: 0 auto;
-            border: 2px solid #7f8c8d;
-            border-radius: 5px;
-            overflow: hidden;
-        }
-        .tile,
-        .single-image {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
         .controls {
-            text-align: center;
             margin: 25px 0;
         }
         button {
@@ -87,8 +64,38 @@
             transform: translateY(-2px);
             box-shadow: 0 4px 8px rgba(0,0,0,0.2);
         }
+
+        /* CONTENEURS D'IMAGES */
+        .image-container,
+        .single-image-container {
+            border: 3px solid #34495e;
+            border-radius: 10px;
+            padding: 10px;
+            background: #f8f9fa;
+            margin: 0 auto 20px auto;
+        }
+
+        .image-grid {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            grid-template-rows: repeat(4, 1fr);
+            gap: 0;
+            width: 1024px;
+            height: 1024px;
+            margin: 0 auto;
+            border: 2px solid #7f8c8d;
+            border-radius: 5px;
+            overflow: hidden;
+        }
+
+        .tile,
+        .single-image {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
         .info {
-            text-align: center;
             color: #7f8c8d;
             margin-top: 20px;
             font-style: italic;
@@ -97,7 +104,7 @@
 </head>
 <body>
     <div class="container">
-        <!-- EN-TÊTE AVEC LOGO ET TITRE -->
+        <!-- EN-TÊTE -->
         <div class="header">
             <img src="https://upload.wikimedia.org/wikipedia/commons/5/54/Logo_iav.png" 
                  alt="Logo IAV" 
